--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
+upload_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
 board_build.partitions = no_ota.csv
 monitor_filters = esp32_exception_decoder
 lib_deps =
-    https://github.com/SignalK/SensESP.git
+    https://github.com/ttlappalainen/NMEA2000.git
+    https://github.com/ttlappalainen/NMEA2000_esp32.git
+    https://github.com/ieb/jdy40.git
+    BluetoothSerial
+    DallasTemperature
+    Adafruit ADS1X15
+    Adafruit BMP280 Library
+    Adafruit Unified Sensor
+;    Older version used SensESP, newer version is NMEA2000 https://github.com/SignalK/SensESP.git
+; with configuration over Bluetooth classic serial when enabled.
+
+[env:native]
+platform = native
+build_flags = -std=gnu++11
+lib_deps = 
+    ArduinoFake
+
